Final Commit= all minor changed done, image off css background was not showing in live page problem fixed final commit

--- a/styles/style.css
+++ b/styles/style.css
@@ -222,7 +222,7 @@ a{
     flex-direction: column;
     gap: 24px;
     color: rgba(255, 255, 255, 0.925);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/handshake.jpg");
+    background-image: linear-gradient(#0d1321a8,#0d1321a8), url("../assets/handshake.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
